Visuele verbeteringen en json fix

--- a/src/stylesheets/_herobanner.scss
+++ b/src/stylesheets/_herobanner.scss
@@ -33,7 +33,7 @@
       @include media-query-large {
         font-size: 3rem;
         width: 50%;
-        overflow: hidden;
+        overflow: visible;
         text-overflow: ellipsis;
         display: -webkit-box;
         -webkit-line-clamp: 3;
