--- a/src/stylesheets/_header.scss
+++ b/src/stylesheets/_header.scss
@@ -78,13 +78,14 @@ header {
 
 .home-link {
   color: $pink;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  padding: 10px !important;
   line-height: normal;
   cursor: pointer;
   display: inline-block;
   font-size: $baseFont;
-  text-align: left;
-  width: 80%;
+  text-align: center;
+  min-width: 180px;
 }
 
 .button {
@@ -210,7 +211,14 @@ header {
     height: 80px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    padding-right: 30px;
+    padding-left: 30px;
+    background-color: rgba($color: #FFFFFF, $alpha: 0.4);
+    position: sticky;
+    top: 0px;
+    z-index: 2;
 
     a {
       display: block;
