Error pagina toegevoegd/veranderd

--- a/src/stylesheets/_landingpage.scss
+++ b/src/stylesheets/_landingpage.scss
@@ -24,6 +24,15 @@
   }
 }
 
+.home-page {
+  display: flex;
+  flex-direction: column;
+
+  p {
+    text-align: center;
+  }
+}
+
 .input-sheet-form {
   @include eight-column-layout-margin;
   display: flex;
