--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -11,6 +11,7 @@
 @import 'layout';
 @import 'landingpage';
 @import 'loader';
+//@import 'newstory';
 @import url(https://www.thoughtworks.com/css/k8s_production/screen.css);
 
 body {
