--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -301,7 +301,7 @@ body {
 
       h3 {
         text-transform: uppercase;
-        font-size: $baseFont;
+        font-size: 32px; // was $baseFont
         margin: 0;
         font-weight: bold;
       }
@@ -346,14 +346,28 @@ body {
 
           .blip-list-item {
             padding: 2px 5px;
+            margin-top: 5px;
             border-radius: 2px;
+            border: 2px solid transparent;
             cursor: pointer;
-            font-size: $baseFont;
+            font-size: 18px; // was $baseFont
             font-weight: 400;
 
             &.highlight {
+              transition: border-bottom-width 0.3s ease 0.4s, border-radius 0.6s ease 0.6s, background-color 0.7s ease 0.0s, color 0.7s ease 0.0s;
+              //transition: border-bottom-width 0s ease 0s, border-radius  0s ease 0s, background-color  0s ease 0s, color 0s ease 1.4s;
               color: white;
               background-color: rgba(0, 0, 0, 0.8);
+            }
+            
+            transition: border-bottom-width 0.3s ease 0.4s, border-radius 0.6s ease 0.6s, background-color 0.8s ease 0.2s, color 0.8s ease 0.2s;
+            //transition: /*border-bottom-width 0s ease 0s, border-radius  0s ease 0s,*/ background-color 0.8s ease 0.2s, color 0.8s ease 0.2s;
+            &.expanded {
+              transition: border-bottom-width 0s ease 0s, border-radius  0s ease 0s, background-color 0.8s ease 0.2s;
+              color: white;
+              background-color: rgba(0, 0, 0, 0.8);
+              border-radius: 2px 2px 0 0;
+              border-bottom-width: 0px;
             }
           }
 
@@ -361,22 +375,29 @@ body {
             max-height: 0;
             overflow: hidden;
             width: 300px;
-
+            border-bottom: 0px solid rgba(0, 0, 0, 0.0);
+            
             p {
               margin: 0;
-              border-top: 1px solid rgb(119, 119, 119);
-              border-bottom: 1px solid rgb(119, 119, 119);
+              //border-top: 1px solid rgb(119, 119, 119);
+              //border-bottom: 1px solid rgb(119, 119, 119);
+              
               padding: 20px;
               color: $grey-text;
               font-weight: 100;
-              font-size: 14px;
+              font-size: 18px;  // was 14px
             }
-
-            transition: max-height 0.2s ease;
+            
+            //transition: max-height 0.2s ease;
+            transition: max-height 0.8s ease 0.2s, border-bottom 0.4s ease 0.4s, border-radius 1.0s ease 0.4s, background-color 0.6s ease 0.4s;
 
             &.expanded {
-              transition: max-height 0.5s ease 0.2s;
+              //transition: max-height 0.5s ease 0.2s;
+              transition: max-height 3.0s ease 0.2s;
+              background-color: lightgrey;
               max-height: 1000px;
+              border-bottom: 2px solid rgba(0, 0, 0, 0.8);
+              border-radius: 0 0 2px 2px;
             }
           }
         }
