--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -17,6 +17,7 @@
 body {
   font: 18px 'Open Sans';
   opacity: 0;
+  overflow: overlay;
   @if $UIRefresh2022 {
     font-family: $baseFontFamily;
     opacity: 1;
@@ -52,6 +53,27 @@ body {
 
   -webkit-font-smoothing: antialiased;
   margin: 0;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  //background: lightgrey;
+  //border-radius: 10px;
+  //box-shadow: inset 0 0 5px grey;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  background-clip: content-box;
+  border: 3.333px solid transparent;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: grey;
 }
 
 @media print {
@@ -248,22 +270,26 @@ body {
       path {
         &.first {
           fill: $green;
-          stroke: none;
+          stroke: $green;
+          //stroke: none;
         }
 
         &.second {
           fill: $blue;
-          stroke: none;
+          stroke: $blue;
+          //stroke: none;
         }
 
         &.third {
           fill: $orange;
-          stroke: none;
+          stroke: $orange;
+          //stroke: none;
         }
 
         &.fourth {
           fill: $violet;
-          stroke: none;
+          stroke: $violet;
+          //stroke: none;
         }
       }
 
@@ -286,10 +312,28 @@ body {
         }
       }
     }
+    
+    div#blip-history {
+      z-index: 3;
+      margin: 0 auto;
+      transition: all 1s ease;
+      position: absolute;
+      left: 0;
+      right: 0;
+      background-color: grey;
+      visibility: hidden;
+      opacity: 0.0;
+
+      &.expanded {
+        transition: all 1s ease;
+        visibility: visible;
+        opacity: 1;
+      }
+    }
 
     div.quadrant-table {
       .quadrant-table__name {
-        display: none;
+        //display: none;
       }
 
       max-height: 0;
