--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -313,7 +313,7 @@ body {
       }
     }
     
-    div#blip-history {
+    /*div#blip-history {
       z-index: 3;
       margin: 0 auto;
       transition: all 1s ease;
@@ -331,6 +331,11 @@ body {
         visibility: visible;
         opacity: 1;
         white-space: normal;
+
+        section {
+          //transition: all 1s ease 1s;
+          //max-width: initial;
+        }
       }
       
       h2 {
@@ -354,18 +359,74 @@ body {
         background-color: lightgrey;
         border-bottom: 4px solid rgba(0, 0, 0, 0.8);
         border-radius: 0 0 4px 4px;
+        //max-width: 5000px;
 
         article {
           transition: all 1s ease;
           padding: 20px;
           color: $grey-text;
+          overflow: hidden;
           //font-weight: 100;
           //font-size: 18px;
+        }
+      }
+    }*/
+
+    div#blip-history {
+      z-index: 3;
+      margin: 0 auto !important;
+      transition: all 1s ease 1s;
+      position: absolute;
+      left: 0;
+      right: 0;
+      background-color: white;
+      visibility: hidden;
+      opacity: 0.0;
+      
+      &.expanded {
+        transition: all 1s ease;
+        visibility: visible;
+        opacity: 1;
+
+        section {
+          transition: max-height 3.0s ease 1.2s, padding 1.0s ease 1.2s;
+          overflow-y: scroll;
+          //max-height: 5000px;
+          padding: 20px;
+        }
+      }
+      
+      h2 {
+        margin: 0;
+        padding: 4px 10px;
+        border: 4px solid transparent;
+        font-weight: 400;
+        line-height: normal;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.8);
+        border-radius: 4px 4px 0 0;
+        white-space: nowrap;
+        overflow: hidden;
+      }
+      
+      section {
+        transition: max-height 1.0s ease 0.2s, padding 0.6s ease 0.4s;
+        padding: 0 20px;
+        background-color: lightgrey;
+        border-bottom: 4px solid rgba(0, 0, 0, 0.8);
+        border-radius: 0 0 4px 4px;
+        //max-height: 0;
+        overflow: hidden;
+
+        article {
+          padding: 20px;
+          color: $grey-text;
         }
       }
     }
 
     div.quadrant-table {
+      z-index: 2;
       .quadrant-table__name {
         //display: none;
       }
@@ -441,7 +502,7 @@ body {
             transition: border-bottom-width 0.3s ease 0.4s, border-radius 0.6s ease 0.6s, background-color 0.8s ease 0.2s, color 0.8s ease 0.2s;
             //transition: /*border-bottom-width 0s ease 0s, border-radius  0s ease 0s,*/ background-color 0.8s ease 0.2s, color 0.8s ease 0.2s;
             &.expanded {
-              transition: border-bottom-width 0s ease 0s, border-radius  0s ease 0s, background-color 0.8s ease 0.2s;
+              transition: border-bottom-width 0s ease 0s, border-radius 0s ease 0s, background-color 0.8s ease 0.2s;
               color: white;
               background-color: rgba(0, 0, 0, 0.8);
               border-radius: 2px 2px 0 0;
