--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -413,6 +413,7 @@ body {
         transition: max-height 1.0s ease 0.2s, padding 0.6s ease 0.4s;
         padding: 0 20px;
         background-color: lightgrey;
+        background-clip: padding-box;
         border-bottom: 4px solid rgba(0, 0, 0, 0.8);
         border-radius: 0 0 4px 4px;
         //max-height: 0;
@@ -421,6 +422,19 @@ body {
         article {
           padding: 20px;
           color: $grey-text;
+
+          h3 {
+            display: inline;
+          }
+          .history-date {
+            display: inline;
+            margin-left: 20px;
+            vertical-align: 15%;
+            padding: 4px;
+            background-color: grey;
+            border-radius: 4px;
+            color: white;
+          }
         }
       }
     }
@@ -515,6 +529,7 @@ body {
             overflow: hidden;
             width: 300px;
             border-bottom: 0px solid rgba(0, 0, 0, 0.0);
+            background-clip: padding-box;
             
             p {
               margin: 0;
@@ -534,6 +549,7 @@ body {
               //transition: max-height 0.5s ease 0.2s;
               transition: max-height 3.0s ease 0.2s;
               background-color: lightgrey;
+              background-clip: padding-box;
               max-height: 1000px;
               border-bottom: 2px solid rgba(0, 0, 0, 0.8);
               border-radius: 0 0 2px 2px;
